hphp/hack/test/typecheck/inout/bad_inout_use_lvalue9.php.like_types.exp
File "bad_inout_use_lvalue9.php", line 6, characters 11-23:
tuple_expression is not allowed in write context (Parsing[1002])
File "bad_inout_use_lvalue9.php", line 6, characters 11-23:
Arguments for `inout` parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
File "bad_inout_use_lvalue9.php", line 6, characters 5-23:
Invalid argument (Typing[4110])
  File "bad_inout_use_lvalue9.php", line 3, characters 18-28:
  Expected `~vec<int>` because it is an unenforceable type
  File "bad_inout_use_lvalue9.php", line 6, characters 11-23:
  But got `(int, int)`
File "bad_inout_use_lvalue9.php", line 6, characters 11-23:
Invalid argument to an `inout` parameter (Typing[4110])
  File "bad_inout_use_lvalue9.php", line 6, characters 11-23:
  Expected `(int, int)`
  File "bad_inout_use_lvalue9.php", line 3, characters 18-28:
  But got `vec<int>`
